package com.tus.ca.flight.reservation.enums;

public enum BookingClass {
    Business,
    Economy
}
