package com.tus.ca.flight.reservation.enums;

public enum Gender {
        MALE, FEMALE
}
